--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
-.App {
-  text-align: center;
+.bg-custom-primary{
+    background-color: rgb(233, 224, 255);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bg-custom-gradient{
+    background-image: linear-gradient(rgb(233, 224, 255),rgb(187, 158, 255)) ;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.highlighted{
+    color:rgb(59, 1, 100);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bg-highlighted{
+    background-color:rgb(12, 0, 20);
 }
