--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@
 .bg-highlighted{
     background-color:rgb(12, 0, 20);
 }
+.custom-card{
+    border: 2px solid #dfddff;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
